--- a/style.css
+++ b/style.css
@@ -1,27 +1,18 @@
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: antiquewhite;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
 .cell {
-    background-color: rgb(9, 214, 241);
+    width: 75px;
+    height: 75px;
+    border: 2px solid;
+}
+
+#cellContainer {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    width: 225px;
+    margin: auto;
+}
+
+h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 4px solid purple;
-    width: 100px;
-    height: 100px;
-}
-
-#tic-tac-toe-game {
-    display: grid;
-    grid-template-columns: repeat(3,100px);
-    grid-template-rows: repeat(3,100px);
-    gap:12px;
 }
