--- a/style.css
+++ b/style.css
@@ -15,4 +15,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
 }
+
