--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
     grid-template-columns: repeat(3, auto);
     width: 225px;
     margin: auto;
+    text-align: center;
+    font-size: 55px;
+    
 }
 
 h1 {
@@ -19,3 +22,11 @@ h1 {
     color: black;
 }
 
+#status {
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+};
+
+body {
+    text-align: center;
+}
